Fix layout issue in AlertBox close button CSS

--- a/react-alert-box/src/css/alert-box.scss
+++ b/react-alert-box/src/css/alert-box.scss
@@ -27,8 +27,7 @@ $alert-box-margin: 0 0 10px 10px !default;
 $alert-box-padding: 15px !default;
 $alert-box-border: 1px solid transparent !default;
 
-$alert-box-close-height: 28px;
-$alert-box-close-top: calc(50% - #{$alert-box-close-height}/2) !default; // Center vertically with 50% - close button height / 2
+$alert-box-close-top: calc(50%); // Center vertically with 50% - close button height / 2
 $alert-box-reload-link-color: white !default;
 
 @mixin react-alert-box($bg-color, $border-color, $color) {
@@ -62,9 +61,9 @@ $alert-box-reload-link-color: white !default;
   .alert-box-close {
     position: absolute;
     font-size: 18px;
-    top: $alert-box-close-top;
+    top: 50%;
+    transform: translateY(-50%);
     right: calc(#{$closable-button-padding}/2 - 9px); // Center horizontally close button
-    height: $alert-box-close-height;
     padding: 5px;
     text-decoration: none;
   }
